plugins {
	id 'java-library'
	id 'maven-publish'
}

java {
	sourceCompatibility = '8'
}

publishing {
	publications {
		mavenJava(MavenPublication) {
			from components.java
			groupId = 'com.github.JunRock'
			artifactId = 'cussword_lib'
			version = '0.0.1'
		}
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
	maven { url "https://jitpack.io" }
	google()
}

dependencies {
	implementation 'com.github.jitpack:gradle-simple:1.0'
}
tasks.named('test') {
	useJUnitPlatform()
}
